data/derived/comb/progs/unify/prog2499.ml.out
Characters 110-133:
  else ((n mod 10) ::  ( digitsOfInt (n / 10)) ) :: [];;
                       ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type int list
       Type int list is not compatible with type int 
